add all other jvm args for controls fx