@@ -281,7 +281,18 @@ application {
     mainClass.set("io.github.mzmine.main.MZmineCore")
     applicationName = "MZmine"
     applicationDefaultJvmArgs = [
+            // https://github.com/controlsfx/controlsfx/wiki/Using-ControlsFX-with-JDK-9-and-above
             "--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+
+            // logging
             "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration"
     ]
 }
@@ -373,7 +384,7 @@ runtime {
                    "-enableassertions",
                    "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration",
                    "--enable-preview",
-                   ]
+        ]
     }
 }
 
